# getnetwork_b2b

./: .env  Cargo.toml
.github/workflows/: rust.yml2
migrations/2022-08-25-124531_1/: up.sql
src/: errors.rs  main.rs  routes.rs  schema.rs
src/models/: mod.rs  user.rs
src/models/sql/: main.sql
src/utils/: forms.rs  mod.rs
src/views/: mod.rs  pages.rs
templates/mobile/generic/: anon_first_load.stpl
